# CryptoSignalAgent

./: .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  main.py  pyproject.toml
app/: main.py  runtime.py
app/agents/: report_agent.py
app/agents/llm/: __init__.py  base.py  langchain_client.py  openai_compatible.py
app/api/: deps.py  routes.py
app/config/: logging.py  settings.py
app/conversation/: __init__.py  errors.py  projector.py  service.py  store.py
app/graph/: mcp_subgraph.py  workflow.py
app/memory/: mem0_service.py  session_store.py
app/models/: schemas.py  state.py
app/observability/: langsmith.py
app/retrieval/: embedding.py  milvus_store.py  research_service.py
app/tools/: mcp_client.py  mcp_gateway.py
docs/: ai_task_compass.md  architecture.md  conversation_dialogue_refactor.md  design.md  frontend_debug.md  frontend_design.md  signal_knowledge_refactor.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/scripts/: ui-debug.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
scripts/: drop_legacy_research_collection.py  init_milvus.py  inspect_mcp.py  repair_user_memory_profile.py  verify_mcp_servers.py
tests/: test_api.py  test_conversation_api.py  test_conversation_recovery.py  test_llm_factory.py  test_mcp_client.py  test_mcp_subgraph.py  test_mem0_service.py  test_outbox_projector.py  test_report_agent.py  test_settings.py  test_workflow_symbols.py
(+10 files in other folders)
